fix : 애플 닉네임 null 수정